Bug 407774 - Circle line color patch not correct for second circle
Summary: Circle line color patch not correct for second circle
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: 4.2.0-alpha
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-20 18:25 UTC by Yncke
Modified: 2019-05-23 12:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yncke 2019-05-20 18:25:41 UTC
SUMMARY


STEPS TO REPRODUCE
(0. Let's say the current brush colour is red.)
1. Create a vector layer.
2. On this vector layer: create a circle. (It is red.)
3. Select the circle with the "Select Shapes Tool"
4. In the line tab, change the line colour by selecting the black patch. (It is now black)
5. Create a new circle with the circle tool. (The new circle is red.)
6. Select the new circle with the "Select Shapes Tool."
7. In the line tab, the colour which is indicated is red, but the patch which is selected is black. To change the red circle to black, you need to select another patch first.


OBSERVED RESULT
See above.

EXPECTED RESULT
The patch colour should follow the line colour.


SOFTWARE/OS VERSIONS
Krita

 Version: 4.2.0-beta
 Languages: en_US, en
 Hidpi: false

Qt

  Version (compiled): 5.12.2
  Version (loaded): 5.12.2

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.9.0-9-amd64
  Pretty Productname: Debian GNU/Linux 9 (stretch)
  Product Type: debian
  Product Version: 9

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2019-05-21 08:56:03 UTC
Yes... But how would you handle the case where the current color is not in the palette that's currently shown in the popup color selector? It's not always possible to simply select the current color in the palette popup.
Comment 2 Halla Rempt 2019-05-21 09:19:13 UTC
Git commit 95ebe47953af853527e1cbdcd05f98d80a58ca56 by Boudewijn Rempt.
Committed on 21/05/2019 at 09:18.
Pushed by rempt into branch 'master'.

Allow selecting a palette entry that is already selected

So you can select the color that you selected previously for an
object that has a different color.
BACKPORT:krita/4.2

M  +2    -1    libs/widgets/kis_palette_view.cpp

https://invent.kde.org/kde/krita/commit/95ebe47953af853527e1cbdcd05f98d80a58ca56
Comment 3 Halla Rempt 2019-05-21 16:45:24 UTC
Git commit 93d6452ee2309c823a27de9f595e37e88daacecb by Boudewijn Rempt.
Committed on 21/05/2019 at 09:18.
Pushed by rempt into branch 'rempt/407659'.

Allow selecting a palette entry that is already selected

So you can select the color that you selected previously for an
object that has a different color.
BACKPORT:krita/4.2

M  +2    -1    libs/widgets/kis_palette_view.cpp

https://invent.kde.org/kde/krita/commit/93d6452ee2309c823a27de9f595e37e88daacecb
Comment 4 Yncke 2019-05-21 17:52:04 UTC
> But how would you handle the case where the current color is not in the palette that's currently shown in the popup color selector?

Then I wouldn't select a patch at all. Given that a palette is limited in amount of colours, I think it's fairly intuitive to the user that sometimes no patch is selected.
Comment 5 Halla Rempt 2019-05-23 12:17:29 UTC
Git commit 2585f0af2695816a0586c7c0e190e615584c12aa by Boudewijn Rempt.
Committed on 23/05/2019 at 11:56.
Pushed by rempt into branch 'krita/4.2'.

Allow selecting a palette entry that is already selected

So you can select the color that you selected previously for an
object that has a different color.
BACKPORT:krita/4.2
(cherry picked from commit 95ebe47953af853527e1cbdcd05f98d80a58ca56)

M  +2    -1    libs/widgets/kis_palette_view.cpp

https://invent.kde.org/kde/krita/commit/2585f0af2695816a0586c7c0e190e615584c12aa