Allow selecting a palette entry that is already selected

So you can select the color that you selected previously for an
object that has a different color.

BUG:407774
BACKPORT:krita/4.2